# testdata

./: .gitignore  Dockerfile  README.md  docker-compose.yml  probe.py  pyproject.toml  requirements.txt  test_write.py
health_sync/: __init__.py  cli.py  config.py  models.py  sheets.py  utils.py
health_sync/playwright/: garmin_login.py  rolla_one_login.py  rolla_ross_login.py
health_sync/sources/: __init__.py  apple_health.py  garmin.py  oura.py  oura_oauth.py  oura_tokens.json  polar.py  rolla_one.py  rollaone.py  ross.py  ultrahuman.py  whitings.py
scripts/: check_garmin_state.py  debug_garmin_endpoints.py  garmin_login_export.py  gc_debug_day.py  gc_login.py  gc_pull_to_sheet.py  push_garmin_to_sheet.py  push_oura_to_sheet.py  push_polar_to_sheet.py  push_rollaone_to_sheet.py  push_ross_to_sheet.py  push_ultrahuman_to_sheet.py  push_whitings_to_sheet.py
sources/: __init__.py
state/: garmin.json
state/playwright-chrome-profile/: Last Browser  Local State
state/playwright-chrome-profile/Default/: BrowsingTopicsState  DIPS  Favicons  History  Preferences  Secure Preferences  Top Sites  Web Data
state/playwright-chrome-profile/Default/DawnGraphiteCache/: data_1  index
state/playwright-chrome-profile/GrShaderCache/: data_0  data_1  f_000001  f_000002  f_000003  f_000004  f_000005  f_000006  f_000007  f_000008  f_000009  f_00000a  f_00000b  f_00000c  index
state/playwright-chrome-profile/GraphiteDawnCache/: data_1  index
state/playwright-chrome-profile/ShaderCache/: data_1  index
state/playwright-chrome-profile/segmentation_platform/: ukm_db
tests/: test_basic.py
(+134 files in other folders)
